[package]
name = "roomler-tunnel-installer"
version.workspace = true
edition.workspace = true
description = "Install + onboarding wizard for roomler-tunnel (Win/Linux/macOS)."

[lib]
# Lib name DELIBERATELY avoids the "install"/"setup"/"update"/"patch"
# substrings: Windows UAC's "installer detection" heuristic
# auto-elevates 32/64-bit EXEs whose filename contains any of those.
# Cargo's test binaries are named after the lib crate, so a lib named
# `roomler_tunnel_installer` produces `roomler_tunnel_installer-<hash>
# .exe` which UAC refuses to launch from an unelevated `cargo test`
# with "os error 740: The requested operation requires elevation".
# Same lesson as the rc.28 agent wizard (lib name `wizard_core`); see
# agents/roomler-installer/Cargo.toml for the original write-up.
#
# The user-facing bin EXE keeps the "roomler-tunnel-installer" name —
# operators see the friendly name; only the internal lib renames.
name = "tunnel_wizard_core"
path = "src/lib.rs"

[[bin]]
name = "roomler-tunnel-installer"
path = "src/main.rs"

[dependencies]
# Lib dep on the tunnel CLI — wizard reuses `config::{TunnelConfig,
# save, load}`, `derive_machine_id`-style helpers, and the same
# `tunnel_client_token` shape. Adds the tunnel-core transitive deps
# (webrtc-rs, etc.) which is heavier than ideal for an installer, but
# matches the agent wizard's lib-reuse pattern. Pulling the helpers
# out into a smaller `roomler-tunnel-common` crate is v2 scope.
roomler-tunnel = { path = "../roomler-tunnel" }

# JWT introspection — works for any audience, including TunnelClient
# and TunnelEnrollment. Same lib the agent wizard reuses.
roomler-agent = { path = "../roomler-agent" }

# P4a: shared wizard mechanics (archive extract, PATH/symlink
# integration, tunnel-enroll HTTP) extracted to the setup core; this
# legacy crate re-exports them path-compatibly until P4c retires it.
roomler-setup-core = { path = "../../crates/roomler-setup-core" }

# Tauri 2.x runtime. NO `tray-icon` feature — the wizard is a
# foreground window, exits on Finish/Cancel. `custom-protocol` is
# REQUIRED for `cargo build --release` to embed the front-end assets
# rather than loading from `devUrl`.
tauri = { version = "2", features = ["custom-protocol"] }
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-dialog = "2"

# Async + error handling — shared workspace versions.
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# HTTP client for downloading the CLI archive through the
# roomler.ai/api/tunnel-wizard/{platform} proxy AND for hitting
# /api/tunnel-client/enroll directly during the Install step.
reqwest = { workspace = true }

# `futures::StreamExt::next` for the reqwest bytes_stream loop in
# `asset_resolver::download`.
futures = { workspace = true }

# SHA256 verification of the downloaded archive bytes against the
# `digest` field returned by `/installer/<platform>/health`.
sha2 = { workspace = true }
hex = { workspace = true }

# JWT payload decoding for `token_type` introspection (rc.60 hotfix).
# The agent crate's `jwt_introspect::parse_unverified` only exposes
# the standard claims (`iss`/`aud`/`exp`/`sub`/`jti`); the Roomler
# server's tunnel-enrollment JWT uses a custom `token_type` claim
# (snake-case enum value `tunnel_enrollment`) and NO `aud` claim, so
# the wizard peeks at the payload itself to gate the Continue button
# on the right token type. Lifting `token_type` into `JwtView` would
# be the cleaner cross-crate fix; out of scope for this hotfix.
base64 = { workspace = true }

# Hostname for the default device-name field on the Server step.
gethostname = "0.5"

# Wizard-state persistence path resolution.
directories = { workspace = true }
toml = { workspace = true }

# (zip/flate2/tar + windows-sys dropped in P4a — their only consumers
# here were extract.rs and integration.rs, which moved to
# roomler-setup-core along with the feature lists they actually use.)

[dev-dependencies]
tempfile = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
