[package]
name = "roomler-ai-api"
version.workspace = true
edition.workspace = true

[lib]
name = "roomler_ai_api"
path = "src/lib.rs"

[[bin]]
name = "roomler-ai-api"
path = "src/main.rs"

[features]
default = []


[dependencies]
roomler-ai-config = { path = "../config" }
roomler-ai-db = { path = "../db" }
roomler-ai-services = { path = "../services" }
roomler-ai-remote-control = { path = "../remote_control" }

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
serde.workspace = true
serde_json.workspace = true
mongodb.workspace = true
bson.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
anyhow.workspace = true
jsonwebtoken.workspace = true
dashmap.workspace = true
redis.workspace = true
futures.workspace = true
validator.workspace = true
tempfile.workspace = true
reqwest.workspace = true
mediasoup.workspace = true
dotenvy.workspace = true
hmac.workspace = true
sha1.workspace = true
sha2.workspace = true
hex.workspace = true
base64.workspace = true
async-trait.workspace = true
nanoid.workspace = true
