[package]
name = "roomler-ai-db"
version.workspace = true
edition.workspace = true

[dependencies]
roomler-ai-config = { path = "../config" }
mongodb.workspace = true
bson.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
uuid.workspace = true
tracing.workspace = true
thiserror.workspace = true
