[package]
name = "roomler-ai-tunnel-core"
version.workspace = true
edition.workspace = true
description = "Roomler AI tunnel core — shared transport, signalling, ACL, and forwarding pump for the roomler-tunnel client and the agent's tunnel service."

[lib]
name = "tunnel_core"
path = "src/lib.rs"

[dependencies]
# Shared protocol types (rc:tunnel.* will land in remote_control's
# ClientMsg/ServerMsg enum in T2; tunnel-core re-exports the subset
# it cares about so callers have one import).
roomler-ai-remote-control = { path = "../remote_control" }

# Async + concurrency
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# ObjectId for session keys (matches the rc:* wire format)
bson = { workspace = true }

# WebRTC peer (vendored — gains SettingEngine::set_sctp_max_receive_buffer_size)
webrtc = { workspace = true }

# Byte buffers for the DC send/recv path. webrtc-rs already pulls
# `bytes` transitively but listing it here keeps the import surface
# explicit; the version constraint matches the agent's pin.
bytes = "1"

# CIDR matching in DestinationRule — tiny, no_std-friendly.
ipnet = "2"

# QUIC transport (`quic-v1`). Force the `ring` crypto provider on quinn,
# rustls, AND rcgen so QUIC adds NO new C/NASM build: the tree already
# resolves rustls 0.23 + ring 0.17 + rcgen 0.13 with aws-lc-rs ABSENT
# (webrtc-dtls pulls rcgen+ring), so ring-only keeps that invariant and
# dodges the openssl/vp9-444/aws-lc-rs C-build pain. quinn's default
# features include rustls-aws-lc-rs, hence default-features = false.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
sha2 = { workspace = true }
hex = { workspace = true }

# STUN transaction-id entropy (Phase 2 srflx candidate gathering). A
# workspace dep already in the tree; ring/quinn pull it transitively.
rand = { workspace = true }

# QUIC-over-TURN relay tiers (Phase 3 Tier 2/3). The `turn` client
# yields a TURN-relayed `util::Conn` that `transport::relay::TurnRelayConn`
# bridges to quinn's `AsyncUdpSocket`, so QUIC can ride a coturn
# allocation when direct hole-punch fails. `webrtc-util` (lib name
# `util`) is the home of the `Conn` trait that `turn` returns. Versions
# match the vendored `webrtc-ice` resolve — one `util::Conn` in the tree.
turn = { workspace = true }
webrtc-util = { workspace = true }

# Tier 3 (TURNS/TCP, for UDP-blocked corp nets): reuse the vendored
# `webrtc-ice`'s field-proven `TcpTurnConn` (a `util::Conn` over
# TLS-over-TCP to coturn, with RFC 5766 §11.5 ChannelData framing) as the
# `turn` client's underlay. Already in the tree transitively via `webrtc`;
# declared directly here just to name `webrtc_ice::agent::tcp_turn_conn`.
# Resolves to `crates/vendored/webrtc-ice` via the root `[patch.crates-io]`.
webrtc-ice = "0.12.0"

# Overlay L3 data plane (`overlay` feature): userspace WireGuard via
# boringtun (pure-Rust Noise state machine — `Tunn::encapsulate` /
# `decapsulate`, no socket/TUN of its own, so the same WG ciphertext
# rides either a UDP socket or the coturn `RelayConn`). Curve25519 keygen
# comes from boringtun's re-exported `x25519`. Feature-gated so default
# builds stay overlay-free (same discipline as the agent's `vp9-444`).
boringtun = { version = "0.7", optional = true }
base64 = { workspace = true, optional = true }

[features]
# Userspace WireGuard L3 overlay (Phase 2+). Off by default.
overlay = ["dep:boringtun", "dep:base64"]

[dev-dependencies]
tokio-test = { workspace = true }
