[package]
name = "roomler-ai-tunnel-core"
version.workspace = true
edition.workspace = true
description = "Roomler AI tunnel core — shared transport, signalling, ACL, and forwarding pump for the roomler-tunnel client and the agent's tunnel service."

[lib]
name = "tunnel_core"
path = "src/lib.rs"

[dependencies]
# Shared protocol types (rc:tunnel.* will land in remote_control's
# ClientMsg/ServerMsg enum in T2; tunnel-core re-exports the subset
# it cares about so callers have one import).
roomler-ai-remote-control = { path = "../remote_control" }

# Async + concurrency
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Tracing
tracing = { workspace = true }

# Errors
thiserror = { workspace = true }
anyhow = { workspace = true }

# ObjectId for session keys (matches the rc:* wire format)
bson = { workspace = true }

# WebRTC peer (vendored — gains SettingEngine::set_sctp_max_receive_buffer_size)
webrtc = { workspace = true }

# Byte buffers for the DC send/recv path. webrtc-rs already pulls
# `bytes` transitively but listing it here keeps the import surface
# explicit; the version constraint matches the agent's pin.
bytes = "1"

# Raw socket options for the tunnel-session driver's local TCP accept loop:
# `setsockopt` TCP_NODELAY (Nagle off) + a 4 MiB SO_SNDBUF on each accepted
# stream — the P0 throughput fix (moved here from the CLI's `forward.rs` in
# P3b-1). Already transitive via vendored webrtc-data, so zero extra build.
socket2 = "0.5"

# CIDR matching in DestinationRule — tiny, no_std-friendly.
ipnet = "2"

# QUIC transport (`quic-v1`). Force the `ring` crypto provider on quinn,
# rustls, AND rcgen so QUIC adds NO new C/NASM build: the tree already
# resolves rustls 0.23 + ring 0.17 + rcgen 0.13 with aws-lc-rs ABSENT
# (webrtc-dtls pulls rcgen+ring), so ring-only keeps that invariant and
# dodges the openssl/vp9-444/aws-lc-rs C-build pain. quinn's default
# features include rustls-aws-lc-rs, hence default-features = false.
quinn = { version = "0.11", default-features = false, features = ["runtime-tokio", "rustls-ring", "log"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rcgen = { version = "0.13", default-features = false, features = ["ring"] }
sha2 = { workspace = true }
hex = { workspace = true }

# STUN transaction-id entropy (Phase 2 srflx candidate gathering). A
# workspace dep already in the tree; ring/quinn pull it transitively.
rand = { workspace = true }

# QUIC-over-TURN relay tiers (Phase 3 Tier 2/3). The `turn` client
# yields a TURN-relayed `util::Conn` that `transport::relay::TurnRelayConn`
# bridges to quinn's `AsyncUdpSocket`, so QUIC can ride a coturn
# allocation when direct hole-punch fails. `webrtc-util` (lib name
# `util`) is the home of the `Conn` trait that `turn` returns. Versions
# match the vendored `webrtc-ice` resolve — one `util::Conn` in the tree.
turn = { workspace = true }
webrtc-util = { workspace = true }

# Tier 3 (TURNS/TCP, for UDP-blocked corp nets): reuse the vendored
# `webrtc-ice`'s field-proven `TcpTurnConn` (a `util::Conn` over
# TLS-over-TCP to coturn, with RFC 5766 §11.5 ChannelData framing) as the
# `turn` client's underlay. Already in the tree transitively via `webrtc`;
# declared directly here just to name `webrtc_ice::agent::tcp_turn_conn`.
# Resolves to `crates/vendored/webrtc-ice` via the root `[patch.crates-io]`.
webrtc-ice = "0.12.0"

# Overlay L3 data plane (`overlay` feature): userspace WireGuard via
# boringtun (pure-Rust Noise state machine — `Tunn::encapsulate` /
# `decapsulate`, no socket/TUN of its own, so the same WG ciphertext
# rides either a UDP socket or the coturn `RelayConn`). Curve25519 keygen
# comes from boringtun's re-exported `x25519`. Feature-gated so default
# builds stay overlay-free (same discipline as the agent's `vp9-444`).
boringtun = { version = "0.7", optional = true }
base64 = { workspace = true, optional = true }

# Overlay direct LAN path (rc.131/132): enumerate the node's local interface
# IPv4s so a multi-homed host advertises ALL its LAN endpoints (not just the
# default-route one) — a peer then matches whichever is on its subnet.
# Cross-platform (Posix getifaddrs + Windows GetAdaptersAddresses), no C build.
if-addrs = { version = "0.15", optional = true }

# Overlay L3 surface (`overlay-l3` feature): the OS TUN virtual NIC.
# Pure-Rust build — loads Wintun (a signed driver DLL) at runtime on
# Windows, /dev/net/tun on Linux, utun on macOS; no C compiled here.
# `AsyncDevice::{recv,send}` take `&self`, so one `Arc<AsyncDevice>`
# drives the bridge's concurrent read + write loops. Kept separate from
# `overlay` (the WG core) so the server/lib can use the WG types without
# pulling a TUN dependency.
tun = { version = "0.8", optional = true, features = ["async"] }

# Overlay netstack (`overlay-netstack` feature): a userspace TCP/IP stack
# (smoltcp) that terminates the overlay CIDR IN-PROCESS — the OS-free twin
# of `SystemTun`. On a locked-down host (full-tunnel VPN) there is then no
# OS route for the VPN to hijack and no TUN it can see; apps reach the mesh
# via a local SOCKS front backed by the netstack. Pure-Rust, `no_std`-friendly
# crate — NO C build, no crypto — so it keeps the ring-only / no-openssl
# invariant intact (builds under MSVC locally like the rest of tunnel-core).
# default-features off to drop the Unix-only phy backends (`phy-tuntap_interface`)
# and the protocols we don't terminate; we feed/drain raw IP packets ourselves
# via a channel-backed `phy::Device`, so only the `medium-ip` surface is needed.
smoltcp = { version = "0.13", optional = true, default-features = false, features = [
    "std",
    "medium-ip",
    "proto-ipv4",
    # Dual-stack: terminate the derived overlay IPv6 ULA in userspace too. On
    # `medium-ip` there is no NDP/RA (no L2), so v6 is addressing + ICMPv6 only.
    # Inert until a node assigns a v6 address (see docs/netstack-ipv6-plan.md).
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    # Auto-answer ICMP echo requests to our own overlay IP at the iface layer, so
    # a netstack host is `roomler ping`-able like a normal host (no app socket
    # needed to reply). The `ping` verb itself is `socket-icmp` (above).
    "auto-icmp-echo-reply",
] }

# Windows bindings (Win32). Always compiled on Windows (NOT optional) because
# the LocalAPI named-pipe listener (`localapi::serve`, unification P1) needs the
# SDDL security-descriptor helpers in EVERY build — the LocalAPI is core daemon
# plumbing, not overlay-gated. The overlay-l3 WFP features (below) ride the same
# dependency; they're only *used* under `cfg(all(windows, feature="overlay-l3"))`
# in `wfp.rs`, but compiling their bindings unconditionally is free (metadata).
# Same `windows-sys` 0.61 the `tun` crate already resolves — no new crate, no C build.
[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Foundation",                                 # HANDLE, FWP_E_ALREADY_EXISTS, WIN32_ERROR, LocalFree (free the converted SD)
    "Win32_Security",                                   # PSECURITY_DESCRIPTOR, SECURITY_ATTRIBUTES
    "Win32_Security_Authorization",                     # ConvertStringSecurityDescriptorToSecurityDescriptorW (LocalAPI pipe SDDL)
    "Win32_System_Rpc",                                 # RPC_C_AUTHN_WINNT, SEC_WINNT_AUTH_IDENTITY_W
    "Win32_NetworkManagement_WindowsFilteringPlatform", # Fwpm*, FWPM_* structs/flags/layer GUIDs
    "Win32_NetworkManagement_IpHelper",                 # ConvertInterfaceAliasToLuid (fallback)
    "Win32_NetworkManagement_Ndis",                     # NET_LUID_LH (fallback)
    "Win32_Networking_WinSock",                         # setsockopt IP_UNICAST_IF (rc.144 direct egress pin)
]

[features]
# Userspace WireGuard L3 overlay (Phase 2+). Off by default.
overlay = ["dep:boringtun", "dep:base64", "dep:if-addrs"]
# Phase 3: the OS TUN device (`overlay::tun::SystemTun`) on top of the WG
# core. `overlay` alone gives the WG device + the bridge logic + the
# in-memory MockTun loopback test (no real device); `overlay-l3` adds the
# `tun` crate's real `SystemTun`. Off by default.
overlay-l3 = ["overlay", "dep:tun"]
# Netstack: a userspace smoltcp TCP/IP stack presented as an alternative
# `TunIo` (so the WG bridge pumps it exactly like `SystemTun`), plus an
# app-facing `connect()`/`listen()` surface for a SOCKS front. Builds on the
# WG core (`overlay`) but NOT the OS device (`overlay-l3`) — that's the whole
# point: no OS routing. Off by default; independent of `overlay-l3` (a node
# runs one surface or the other).
overlay-netstack = ["overlay", "dep:smoltcp"]

[dev-dependencies]
tokio-test = { workspace = true }
